Add admin order status updates & transition policy
Introduce manual order status update flow and stage transition policy.

Key changes: add UpdateOrderStatusDto, OrderTransitionPolicy, trackingCode on Order, DB lock query, and OrderService.updateOrderStatusAsAdmin with audit/inventory/event handling. OrderResponseMapper exposes trackingUrl/trackingCode and allowedNextStatuses. Add controller PATCH/PUT endpoints and tests. Frontend: types, service, store and Admin OrderDetails UI/modal to update status and show tracking info. Misc: CORS origins + HEAD, expose forgot/reset auth endpoints, adjust Docker uploads path and docker-compose volume, replace placeholder banner images, and update prod properties. Tests updated/added.